@@ -7,8 +7,9 @@ nagvis (1:1.6.4.dfsg.1-1) UNRELEASED; urgency=low
   * Fix "Germish" in package description
   * Remove unbuildable swf files
     * Add patches/remove-shell-swf to don't use it
+    * Add get-orig-source target to debian/rules
 
- -- Alexander Reichle-Schmehl <tolimar@debian.org>  Tue, 06 Mar 2012 14:30:34 +0100
+ -- Alexander Reichle-Schmehl <tolimar@debian.org>  Tue, 06 Mar 2012 16:07:30 +0100
 
 nagvis (1:1.6.4-1) experimental; urgency=low
 
